# Meeting-insight-agent

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
alembic/: env.py
samples/: curl_examples.sh  test_api.py  test_live_meeting.py
src/: __init__.py  config.py  main.py
src/api/: dependencies.py  middleware.py
src/api/v1/: budget.py  health.py  live.py  meetings.py  router.py
src/db/: __init__.py  models.py  repository.py  session.py
src/live/: __init__.py  browser_bot.py  session_manager.py  stream_transcriber.py  ws_handler.py
src/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/providers/: __init__.py  base.py  gemini_provider.py  groq_provider.py  openai_provider.py  rule_engine.py
src/resilience/: __init__.py
src/schemas/: __init__.py
src/services/: __init__.py  background.py  cost_tracker.py  meeting_service.py  provider_router.py
src/utils/: __init__.py  audio_processor.py  prompts.py
tests/: conftest.py
tests/unit/: test_provider_router.py
